# hydrating

./: HISTORY.md  LICENSE  README.md  requirements_tests.txt  setup.cfg
src/hydrating/: __init__.py
src/hydrating/core/: grades.py  hydrating.py
src/hydrating/models/: __init__.py  models.py
src/hydrating/uncertainty/: voting_point_draft.py
tests/: test_powerlaw.py
